src/snapshots/afrotd__parser__tests__interpretation_3.4.4_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 4
index: 6
text: "Zweite Spielperiode bei ausgeglichenem Punktestand. Beim Snap\nsind 0:45 auf der Game Clock. Während des Downs verliert A55 seinen\nHelm. Der rechte Tackle A77 erhält eine Flagge für ein Festhalten. Der\nBallträger wird inbounds kurz vor der Line-to-Gain getackelt."
ruling: "A55 muss das Spielfeld für einen Down verlassen. Es gibt keine Option zum 10-Sekunden-Abzug von der Game Clock, da die Game Clock\nsowohl für den Helmverlust als auch für die Strafdurchführung angehalten wurde. Die Play Clock wird auf 25 Sekunden gesetzt und die Game\nClock startet mit der Ballfreigabe durch den Referee oder mit dem Snap,\nje nach Wahl des gefoulten Teams (Regel 3.3.10)."
