src/snapshots/afrotd__parser__tests__interpretation_3.4.4_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 4
index: 7
text: "3. und 5 von der B-15. Zu einem späten Zeitpunkt in der vierten Spielperiode liegt Team A mit 10:7 zurück. Quarterback A11 muss\nausweichen, advanct und ist an der B-12, als er einen unvollständigen Vorwärtspass wirft. Als der Ball dead wird, zeigt die Game Clock\n0:13. Team B akzeptiert die Strafe für den illegalen Vorwärtspass."
ruling: "4. und 7 von der B-17. Team B hat die Möglichkeit einen 10Sekundenabzug von der Game Clock anzunehmen. Vorausgesetzt, Team\nB akzeptiert den Abzug, wird die Game Clock auf 0:03 gesetzt und startet mit der Ballfreigabe durch den Referee."
