src/snapshots/afrotd__parser__tests__interpretation_3.5.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 2
index: 2
text: "Nach einem Team Ballbesitzwechsel oder einem Timeout wird\nder Ball freigegeben. Wenn Team A seine Offense Formation vervollständigt hat, muss Team B seine Spieler sofort positionieren. Team B\nerhält Zeit, seine Ersatzspieler in Position zu bringen."
ruling: "Jedes\nder Teams kann sich einer Spielverzögerung schuldig machen. Team B,\nwenn es nicht sofort seine Ersatzspieler einwechselt (Regel 3.4.2.b.3)\noder Team A, wenn es den 25-Sekunden-Countdown überzieht. Strafe\n– 5 Meter vom Succeeding Spot."
