src/snapshots/afrotd__parser__tests__interpretation_3.5.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 2
index: 4
text: "Team A befindet sich mit elf Spielern im Huddle. A81 glaubt irrtümlich, er wäre ausgewechselt worden und läuft zu seiner Teamzone.\nEr wird sofort auf das Feld zurückgeschickt und nimmt eine Position an\nder Scrimmage Line in der Nähe seiner Seitenlinie ein. Das gesamte\nTeam hatte vor dem Snap für eine Sekunde still gestanden und es wurde kein Schiedsrichter-Timeout genommen."
ruling: "Dead Ball Foul.\nEin Spieler verliert seinen Status als Spieler, wenn er seine Teamzone\nbetritt, während der Ball dead ist und muss sich an die Auswechselregeln halten. Strafe – 5 Meter vom Succeeding Spot oder 15 Meter\nvom Succeeding Spot, wenn entschieden wird, dass es sich um einen\nVerstoß gegen Regel 9.2.2.b handelt (Regeln 3.5.2.d und 9.2.2.b)."
