src/snapshots/afrotd__parser__tests__interpretation_3.5.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 2
index: 5
text: "Nachdem der Ball spielbereit ist und sich der Umpire (oder der\nCenter Judge) in seiner regulären Position befindet, ersetzt Team A\nschnell einige Spieler durch Ersatzspieler, steht die erforderliche Sekunde still und snappt den Ball. Der Umpire versucht, zum Ball zu gelangen, um der Defense zu erlauben, ebenfalls auszuwechseln, schafft\nes aber nicht, den Snap zu verhindern."
ruling: "Der Down muss unterbrochen, die Game Clock angehalten und der Defense erlaubt werden, ihre Auswechselungen in Reaktion auf Team A’s schneller Auswechselung vorzunehmen. Team A wird beim ersten Verstoß mit einer\n5-Meterstrafe für eine Spielverzögerung belegt. Die Play Clock wird auf\n25 Sekunden gesetzt und startet mit der Ballfreigabe. Die Game Clock\nstartet mit der Ballfreigabe oder dem Snap, je nachdem wie ihr Status\nwar, als das Play beendet wurde. Wenn es sich um den ersten Verstoß dieser Art handelt, informiert der Referee den Head Coach, dass\nder nächste Verstoß in einer 15-Meterstrafe für unsportliches Verhalten\nresultiert."
