src/snapshots/afrotd__parser__tests__interpretation_3.5.2_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 2
index: 7
text: "Zu einem späten Zeitpunkt in der ersten Halbzeit hat Team A\nkeine Timeouts mehr. Ein Passspiel endet kurz vor der Line to Gain inbounds an der B-25. Die Game Clock läuft bei 0:10 und Team A schickt\nsofort schnell sein Kicking Team zu einem Fieldgoal auf das Spielfeld.\nEs ist Team A’s Ball, 4. und 3 von der B-25."
ruling: "Team B muss\nin dieser Situation damit rechnen, dass Team A ein Fieldgoal versuchen wird und daher seine Fieldgoal Defense bereit halten. Der Umpire\nmuss nicht über dem Ball stehen bleiben, da die Defense bezüglich des\nkommenden Downs nicht verunsichert ist."
