src/snapshots/afrotd__parser__tests__interpretation_3.5.2_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 2
index: 9
text: "1. und 10 von der A-25. Zu einem späten Zeitpunkt in der ersten Spielperiode advanct Ballträger A21 nach rechts in Richtung seiner\nTeamzone und wird an der A-30 von B54 durch einen Tackle getroffen.\nA21 setzt seine Vorwärtsbewegung fort und landet mit seinem Körper\nan der A-34 (a) gerade noch inbounds; (b) im Aus. Es gibt keine weiteren Auswechselungen für Team A."
ruling: "Team A’s Ball, 2. und\n1 an der A-34. In (a) hält die Game Clock nicht an und die Play Clock\nwird auf 40 Sekunden gesetzt und innerhalb einer Sekunde nachdem\nder Ball dead wurde, gestartet. Team A kann den Ball snappen, wenn\ndieser spielbereit ist. In (b) wird die Game Clock angehalten und mit\nBallfreigabe durch den Referee wieder gestartet. Die Play Clock wird\nauf 40 Sekunden gesetzt und innerhalb einer Sekunde, nachdem der\nBall dead wurde, gestartet Der Referee breitet seine Arme aus („T –\nSignal“) und zeigt so an, dass ein Auswechselprozess im Gange ist\nund dadurch Team B die Möglichkeit gegeben werden muss, seinerseits Auswechselungen vorzunehmen. Wenn Team A-Spieler nach einem Down zwischen den 20-Meterlinien auf ihrer Spielfeldseite ins Aus\ngehen, wird der Referee durch das („T –Signal“), den Prozess der Auswechselungsmechanics starten."
